[package]
name = "rpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
fork = "0.1.21"
gpgme = "0.11.0"
home = "0.5.4"
passwords = "3.1.12"
regex = "1.7.1"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
